# smbox

./: .coverage  .gitignore  LICENSE  README.md  algorithm_design.md  pyproject.toml  requirements.txt  setup.py
examples/: 01_hpo_example.ipynb  02_kaggle_playground_dataset_example.ipynb  hpo_example.ipynb  kaggle_playground_dataset_example.ipynb
examples/.ipynb_checkpoints/: hpo_example-checkpoint.ipynb
examples/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mlruns/0/: meta.yaml
mlruns/131177341715070392/: meta.yaml
mlruns/184810062397699775/: meta.yaml
mlruns/205697415168493969/: meta.yaml
mlruns/319953546548342223/: meta.yaml
mlruns/347416645230884785/: meta.yaml
mlruns/399446363302377687/: meta.yaml
mlruns/425444523041709629/: meta.yaml
mlruns/425926647639127539/: meta.yaml
mlruns/444871648399799829/: meta.yaml
mlruns/458301373631578435/: meta.yaml
mlruns/484182552827794638/: meta.yaml
mlruns/511044825601928240/: meta.yaml
mlruns/514768287922009755/: meta.yaml
mlruns/546557184088881462/: meta.yaml
mlruns/550645877709081334/: meta.yaml
mlruns/573215204863159922/: meta.yaml
mlruns/573582699126533747/: meta.yaml
mlruns/576362441650462243/: meta.yaml
mlruns/610957680397622269/: meta.yaml
mlruns/615986549384458091/: meta.yaml
mlruns/644220470414414733/: meta.yaml
mlruns/646453562701043464/: meta.yaml
mlruns/701176317338411477/: meta.yaml
mlruns/745976187301301130/: meta.yaml
mlruns/825201386405944663/: meta.yaml
mlruns/941348350949836941/: meta.yaml
mlruns/966910084838170944/: meta.yaml
smbox/: Optimise.py  ParamSpace.py  Utils.py  default_objectives.py  optimise.py  paramspace.py  smbox_config.py
smbox/catboost_info/: catboost_training.json  learn_error.tsv  (+1 more)
tests/: test_imports.py  test_own_objective.py  test_run.py
(+14403 files in other folders)
