[tool.poetry]
name = "smbox"
version = "0.1.0"
description = "Sequential Model-Based Optimization eXpress - A lightweight Python library for Hyperparameter Optimization"
authors = ["Tarek Salhi <tareksalhi0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Tarek0/smbox"
repository = "https://github.com/Tarek0/smbox"
documentation = "https://github.com/Tarek0/smbox"
keywords = ["machine learning", "hyperparameter optimization", "SMBO", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "smbox" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.16.0,<2.0"
catboost = "^1.2.7"
mlflow = "^2.20.3"
openml = "^0.12.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
configparser = "^5.3.0"
typing-extensions = "^4.7.1"
setuptools = "^69.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.15.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 